# memex

./: .build.yml  .build.yml.disabled  .gitignore  .vimrc  Cargo.toml  Dockerfile  LICENSE  README.md  config.nims  downscale.sh  index.html  install_imagemagick.sh  makefile  memex.nimble  nim.cfg  package-lock.json  posts.db  rss.xml
archive/: common.nim  config.nims  install_imagemagick.sh  memex.nim  package-lock.json  package.json
content/: posts.csv  rss.xml
content/entries/: 404.md  collections.md  colors.md  directory.md  hanafuda.md  index.md  memex.md  metasyn.md  music.md  now.md  work.md
content/entries/audio/: crosscut.md  diy-synthesizer.md  ee.md  gear.md  integrated-circuits.md  mukashi-dachi.md  permuta.md  petioling.md  quasicrit.md  umbra.md
content/entries/engineering/: diy-synthesizer.md  integrated-circuits.md
content/entries/enumerations/: aspirations.md  audio-gear.md  bike.md  collections.md  games.md  now.md  plants.md  reading.md  recent-changes.md
content/entries/identity/: contact.md  metasyn.md  verifiability.md  work.md
content/entries/language/: carbon-capture.md  hangul.md  nlp.md
content/entries/linguistics/: hangul.md
content/icons/: sun.grid
content/visual/: metasyn.grid  moon.grid  mtsn.pixil
resources/: index.html  styles.css
resources/js/: main.js
resources/video/: metasyn-schotter-rotate.webm
scripts/: deploy.sh  downscale.sh
src/: .main.rs.rustfmt  common.rs  directory_tree.rs  entry.rs  main.rs  memex.nim  parser.rs  regexes.rs  rss.nim  scanner.rs  wand.c
templates/: base.html
(+109 files in other folders)
