[package]
name = "memex"
version = "0.1.0"
edition = "2018"

[dependencies]
comrak = "0.10"
clap = "2.33.3"
colored = "2"
regex = "1"
lazy_static = "1"
chrono = "0.4"
notify = "4.0.16"
dither = "1.3.10"
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.22", features = [ "serialize" ] }
